--- a/Overtime/Views/OvertimeRequest/Approval.cshtml
+++ b/Overtime/Views/OvertimeRequest/Approval.cshtml
@@ -26,6 +26,9 @@
                                     <tr>
                                         <th></th>
                                         <th>
+                                            @Html.DisplayNameFor(model => model.rq_id)
+                                        </th>
+                                        <th>
                                             @Html.DisplayNameFor(model => model.rq_cre_for_name)
                                         </th>
                                         <th>
@@ -44,20 +47,21 @@
                                             @Html.DisplayNameFor(model => model.rq_no_of_hours)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.rq_remarks)
+                                            Deductions(Minutes)
                                         </th>
-
+                                        <th>Eligible</th>
+                                        <th>Deductions</th>
+                                        <th>Hold Details</th>
+                                        <th>Insights</th>
+                                        <th></th>
+                                        <th></th>
+                                        <th>Approval History</th>
                                         <th>
                                             @Html.DisplayNameFor(model => model.rq_cre_by_name)
                                         </th>
                                         <th>
                                             @Html.DisplayNameFor(model => model.rq_cre_date)
                                         </th>
-                                        <th>Hold Details</th>
-                                        <th>Approval History</th>
-                                        <th>Insights</th>
-                                        <th></th>
-                                        <th></th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -84,6 +88,9 @@
                                             </form>
                                         </td>
                                         <td>
+                                            @Html.DisplayFor(modelItem => item.rq_id)
+                                        </td>
+                                        <td>
                                             @Html.DisplayFor(modelItem => item.rq_cre_for_name)
                                         </td>
                                         <td>
@@ -100,34 +107,33 @@
                                             @Html.DisplayFor(modelItem => item.rq_end_time)
                                         </td>
                                         <td>
-                                            @diff.ToString(@"dd\:hh\:mm\:ss")
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.rq_remarks)
+                                            @diff.ToString(@"dd\:hh\:mm")
                                         </td>
 
                                         <td>
-                                            @Html.DisplayFor(modelItem => item.rq_cre_by_name)
+                                            @(Math.Round(item.rq_deductions * 60,2))
                                         </td>
                                         <td>
-                                            @Html.DisplayFor(modelItem => item.rq_cre_date)
+                                            @(Math.Round((item.rq_working_hours - item.rq_deductions)*60,2))
                                         </td>
+                                        <td>
+
+                                            <button type="button" class="btn btn-primary" onclick="Workinghour(@item.rq_id
+                                                              ,@item.rq_doc_id,1)">
+                                                Details
+                                            </button>
+                                        </td>
+
+
                                         <td>
                                             <button type="button" class="btn btn-success" onclick="holdHistory(@item.rq_id
                                                               ,@item.rq_doc_id,'Approve')">
                                                 View
                                             </button>
                                         </td>
+
                                         <td>
-                                            <button type="button" class="btn btn-default" onclick="workflowHistory(@item.rq_id
-                                                              ,@item.rq_doc_id,
-                                                               @item.rq_workflow_id,
-                                                               @item.rq_status)">
-                                                View
-                                            </button>
-                                        </td>
-                                        <td>
-                                            <button type="button" class="btn btn-warning"  onclick="viewInsights(@item.rq_id
+                                            <button type="button" class="btn btn-warning" onclick="viewInsights(@item.rq_id
                                                               ,@item.rq_doc_id,1
                                                               )">
                                                 View
@@ -139,7 +145,20 @@
 
                                         <td>
                                         </td>
-
+                                        <td>
+                                            <button type="button" class="btn btn-default" onclick="workflowHistory(@item.rq_id
+                                                              ,@item.rq_doc_id,
+                                                               @item.rq_workflow_id,
+                                                               @item.rq_status)">
+                                                View
+                                            </button>
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.rq_cre_by_name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.rq_cre_date)
+                                        </td>
 
                                     </tr>
                                             }
@@ -154,6 +173,9 @@
                                             <input type="hidden" class="form-control" name="reason" id="@string.Format("reason{0}", @item.rq_id)" value="" />
                                             <button type="button" class="btn btn-danger" onclick="Reject(@item.rq_id);">Reject</button>
                                         </form>
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.rq_id)
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.rq_cre_for_name)
@@ -172,51 +194,62 @@
                                         @Html.DisplayFor(modelItem => item.rq_end_time)
                                     </td>
                                     <td>
-                                        @diff.ToString(@"dd\:hh\:mm\:ss")
+                                        @diff.ToString(@"dd\:hh\:mm")
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.rq_remarks)
+                                        @(Math.Round(item.rq_deductions * 60,2))
+                                    </td>
+                                    <td>
+                                        @(Math.Round((item.rq_working_hours - item.rq_deductions)*60,2))
+                                    </td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary" onclick="Workinghour(@item.rq_id
+                                                              ,@item.rq_doc_id,1)">
+                                            Details
+                                        </button>
                                     </td>
 
+
+
+                                    <td>
+                                        <button type="button" class="btn btn-success" onclick="holdHistory(@item.rq_id
+                                                              ,@item.rq_doc_id,'Approve')">
+                                            View
+                                        </button>
+                                    </td>
+
+                                    <td>
+                                        <button type="button" class="btn btn-warning" onclick="viewInsights(@item.rq_id
+                                                              ,@item.rq_doc_id,1
+                                                              )">
+                                            View
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <a asp-action="Edit" asp-route-from="Approval" class="btn btn-info" asp-route-id="@item.rq_id">Edit</a>
+                                    </td>
+
+                                    <td>
+                                        <form asp-action="Approve">
+                                            <input type="hidden" name="id" class="form-control" value="@item.rq_id" />
+                                            <input type="hidden" name="from" class="form-control" value="Approval" />
+                                            <input type="submit" value="Approve" class="btn btn-success" />
+                                        </form>
+                                    </td>
+                                    <td>
+                                        <button type="button" class="btn btn-default" onclick="workflowHistory(@item.rq_id
+                                                              ,@item.rq_doc_id,
+                                                               @item.rq_workflow_id,
+                                                               @item.rq_status)">
+                                            View
+                                        </button>
+                                    </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.rq_cre_by_name)
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.rq_cre_date)
                                     </td>
-                                      <td>
-                                            <button type="button" class="btn btn-success" onclick="holdHistory(@item.rq_id
-                                                              ,@item.rq_doc_id,'Approve')">
-                                                View
-                                            </button>
-                                        </td>
-                                        <td>
-                                            <button type="button" class="btn btn-default" onclick="workflowHistory(@item.rq_id
-                                                              ,@item.rq_doc_id,
-                                                               @item.rq_workflow_id,
-                                                               @item.rq_status)">
-                                                View
-                                            </button>
-                                        </td>
-                                        <td>
-                                            <button type="button" class="btn btn-warning"  onclick="viewInsights(@item.rq_id
-                                                              ,@item.rq_doc_id,1
-                                                              )">
-                                                View
-                                            </button>
-                                        </td>
-                                    <td>
-                                        <a asp-action="Edit" asp-route-from="Approval" class="btn btn-info" asp-route-id="@item.rq_id">Edit</a>
-                                    </td>
-
-                                    <td>
-                                        <form asp-action="Approve" >
-                                            <input type="hidden" name="id" class="form-control" value="@item.rq_id" />
-                                            <input type="hidden" name="from" class="form-control" value="Approval" />
-                                            <input type="submit" value="Approve" class="btn btn-success" />
-                                        </form>
-                                    </td>
-
 
                                 </tr>
                                             }
