--- a/Overtime/Views/OvertimeRequest/CustomReport.cshtml
+++ b/Overtime/Views/OvertimeRequest/CustomReport.cshtml
@@ -32,10 +32,14 @@
             <th>
                 @Html.DisplayNameFor(model => model.rq_no_of_hours)
             </th>
+           
             <th>
-                @Html.DisplayNameFor(model => model.rq_remarks)
+                Deductions(Minutes)
             </th>
+            <th>Eligible Hour</th>
+            <th>Deductions</th>
 
+          
 
             <th>
                 History
@@ -86,8 +90,19 @@
 
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.rq_remarks)
+                @(Math.Round(item.rq_deductions * 60))
             </td>
+            <td>
+                @(item.rq_working_hours - item.rq_deductions)
+            </td>
+            <td>
+
+                <button type="button" class="btn btn-primary" onclick="Workinghour(@item.rq_id
+                                                              ,@item.rq_doc_id,0)">
+                    Details
+                </button>
+            </td>
+           
 
             <td>
                 <button type="button" class="btn btn-success" onclick="workflowHistory(@Html.DisplayFor(modelItem => item.rq_id)
@@ -136,9 +151,12 @@
         <td>
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.rq_remarks)
         </td>
+        <td>
+        </td>
+        <td>
 
+        </td>
         <td>
             <button type="button" class="btn btn-success" onclick="workflowHistory(@Html.DisplayFor(modelItem => item.rq_id)
                                                               ,@Html.DisplayFor(modelItem => item.rq_doc_id),
