--- a/Overtime/Views/Documents/Delete.cshtml
+++ b/Overtime/Views/Documents/Delete.cshtml
@@ -5,48 +5,57 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<div class="card">
+    <div class="card-body">
+        <div class="page-header">
+            <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Documents</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.dc_description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.dc_description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.dc_workflow_id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.dc_workflow_id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.dc_active_yn)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.dc_active_yn)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.dc_cre_by)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.dc_cre_by)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.dc_cre_date)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.dc_cre_date)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="dc_id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+            <h3>Are you sure you want to delete this?</h3>
+            <h4>Documents</h4>
+
+        </div>
+        <hr/>
+        <div class="card">
+            <div class="card-body">
+                    <dl class="row">
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.dc_description)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.dc_description)
+                        </dd>
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.dc_workflow_id)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.dc_workflow_id)
+                        </dd>
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.dc_active_yn)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.dc_active_yn)
+                        </dd>
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.dc_cre_by)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.dc_cre_by)
+                        </dd>
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.dc_cre_date)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.dc_cre_date)
+                        </dd>
+                    </dl>
+
+                    <form asp-action="Delete">
+                        <input type="hidden" asp-for="dc_id" />
+                        <input type="submit" value="Delete" class="btn btn-danger" /> |
+                        <a asp-action="Index">Back to List</a>
+                    </form>
+                </div>
+</div>
+</div>
 </div>
