--- a/Overtime/Views/Home/Reset.cshtml
+++ b/Overtime/Views/Home/Reset.cshtml
@@ -4,32 +4,40 @@
     ViewData["Title"] = "Reset";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="card">
+    <div class="card-body">
+        <div class="page-header">
+            <h2>Change Password</h2>
 
-<h2>Change Password</h2>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-4">
+                        <form asp-action="ChangePassword">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="ChangePassword">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-           
-            <div class="form-group">
-                <label asp-for="u_password" class="control-label"></label>
-                <input asp-for="u_password" class="form-control" type="password" />
-                <span asp-validation-for="u_password" class="text-danger"></span>
-            </div>
-           <div class="form-group">
-                <label class="control-label">Confirm Password</label>
-                <input name="u_confirm" class="form-control" type="password" />
-                <span asp-validation-for="u_password" class="text-danger"></span>
-            </div>
-           <div class="form-group">
-               @ViewBag.Error
-           </div>
-           <div class="form-group">
-                   <input type="submit" value="ChangePassword" class="btn btn-primary" />
-           </div>
-</form>
-    </div>
+                            <div class="form-group">
+                                <label asp-for="u_password" class="control-label"></label>
+                                <input asp-for="u_password" class="form-control" type="password" />
+                                <span asp-validation-for="u_password" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">Confirm Password</label>
+                                <input name="u_confirm" class="form-control" type="password" />
+                                <span asp-validation-for="u_password" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                @ViewBag.Error
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="ChangePassword" class="btn btn-primary" />
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
 </div>
-
+</div>
+</div>
+</div>
