--- a/Overtime/Views/OvertimeRequest/Approval.cshtml
+++ b/Overtime/Views/OvertimeRequest/Approval.cshtml
@@ -21,7 +21,7 @@
                         <div class="card-body">
 
 
-                            <table class="table  table-responsive text-nowrap" id="mytable" style="width:100%">
+                            <table class="table  table-responsive text-nowrap"  style="width:100%">
                                 <thead>
                                     <tr>
                                         <th></th>
