--- a/Overtime/Views/Shared/_Layout.cshtml
+++ b/Overtime/Views/Shared/_Layout.cshtml
@@ -239,8 +239,8 @@
         <script src="~/js/jquery-ui.js"></script>
         <script src="~/js/dataTables.buttons.min.js"></script>
         <script src="~/js/jszip.min.js"></script>
-        <script src="~/js/pdfmake.min.js"></script>
-        <script src="~/js/vfs_fonts.js"></script>
+        @*<script src="~/js/pdfmake.min.js"></script>*@
+        @*<script src="~/js/vfs_fonts.js"></script>*@
         <script src="~/js/multiselect.min.js"></script>
         <script src="~/js/buttons.html5.min.js"></script>
         <script src="~/js/sum().js"></script>
