--- a/Overtime/Views/OvertimeRequest/HrAppovalBySearch.cshtml
+++ b/Overtime/Views/OvertimeRequest/HrAppovalBySearch.cshtml
@@ -3,7 +3,7 @@
 @{
     Layout = null;
 }
-<table class="table  table-responsive text-nowrap" style="width:100%">
+<table class="table  table-responsive text-nowrap" id="mytable" style="width:100%">
     <thead>
         <tr>
             <th></th>
