--- a/Overtime/Views/OvertimeRequest/HrAppovalBySearch.cshtml
+++ b/Overtime/Views/OvertimeRequest/HrAppovalBySearch.cshtml
@@ -13,7 +13,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.rq_cre_for_name)
             </th>
-            <th>
+            <th style="width:200px">
                 @Html.DisplayNameFor(model => model.rq_description)
             </th>
             <th>
