--- a/Overtime/Views/User/Create.cshtml
+++ b/Overtime/Views/User/Create.cshtml
@@ -17,29 +17,37 @@
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-group">
                                 <label asp-for="u_full_name" class="control-label"></label>
-                                <input asp-for="u_full_name" class="form-control" />
+                                <input asp-for="u_full_name" class="form-control"  required/>
                                 <span asp-validation-for="u_full_name" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="u_name" class="control-label"></label>
-                                <input asp-for="u_name" class="form-control" />
+                                <input asp-for="u_name" class="form-control"  required/>
                                 <span asp-validation-for="u_name" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="u_password" class="control-label"></label>
-                                <input asp-for="u_password" class="form-control" />
+                                <input asp-for="u_password" class="form-control"  required/>
                                 <span asp-validation-for="u_password" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="u_role_id" class="control-label"></label>
-                                <select asp-for="u_role_id" class="form-control" asp-items="@(new SelectList(ViewBag.RoleList,"r_id","r_description"))">
+                                <select asp-for="u_role_id" class="form-control" asp-items="@(new SelectList(ViewBag.RoleList,"r_id","r_description"))" required>
                                     <option value="">Select Role</option>
                                 </select>
                             </div>
-
+                            <div class="form-group">
+                                <label asp-for="u_allocation_yn" class="control-label"></label>
+                                <select asp-for="u_allocation_yn" class="form-control" required>
+                                    <option value="">Select Option</option>
+                                    <option value="N">N</option>
+                                    <option selected value="Y">Y</option>
+                                </select>
+                                <span asp-validation-for="u_allocation_yn" class="text-danger"></span>
+                            </div>
                             <div class="form-group">
                                 <label asp-for="u_is_admin" class="control-label"></label>
-                                <select asp-for="u_is_admin" class="form-control">
+                                <select asp-for="u_is_admin" class="form-control" required>
                                     <option selected value="N">N</option>
                                     <option value="Y">Y</option>
                                 </select>
