--- a/Overtime/Views/User/Edit.cshtml
+++ b/Overtime/Views/User/Edit.cshtml
@@ -18,12 +18,12 @@
                                 <input type="hidden" asp-for="u_id" />
                                 <div class="form-group">
                                     <label asp-for="u_full_name" class="control-label"></label>
-                                    <input asp-for="u_full_name" class="form-control" />
+                                    <input asp-for="u_full_name" class="form-control" required/>
                                     <span asp-validation-for="u_full_name" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="u_name" class="control-label"></label>
-                                    <input asp-for="u_name" class="form-control" />
+                                    <input asp-for="u_name" class="form-control" required />
                                     <span asp-validation-for="u_name" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
@@ -33,12 +33,20 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="u_role_id" class="control-label"></label>
-                                    <select asp-for="u_role_id" class="form-control" asp-items="@(new SelectList(ViewBag.RoleList,"r_id","r_description"))"></select>
+                                    <select asp-for="u_role_id" class="form-control" asp-items="@(new SelectList(ViewBag.RoleList,"r_id","r_description"))" required></select>
                                 </div>
-
+                                <div class="form-group">
+                                    <label asp-for="u_allocation_yn" class="control-label"></label>
+                                    <select asp-for="u_allocation_yn" class="form-control" required>
+                                        <option value="">Select Option</option>
+                                        <option value="N">N</option>
+                                        <option selected value="Y">Y</option>
+                                    </select>
+                                    <span asp-validation-for="u_allocation_yn" class="text-danger"></span>
+                                </div>
                                 <div class="form-group">
                                     <label asp-for="u_is_admin" class="control-label"></label>
-                                    <select asp-for="u_is_admin" class="form-control">
+                                    <select asp-for="u_is_admin" class="form-control" required>
                                         <option selected value="N">N</option>
                                         <option value="Y">Y</option>
                                     </select>
@@ -46,13 +54,15 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="u_active_yn" class="control-label"></label>
-                                    <select asp-for="u_active_yn" class="form-control">
+                                    <select asp-for="u_active_yn" class="form-control" required>
                                         <option selected value="N">N</option>
                                         <option value="Y">Y</option>
                                     </select>
                                     <span asp-validation-for="u_active_yn" class="text-danger"></span>
                                 </div>
-
+                                <div class="form-group">
+                                    <label class="label-danger">@ViewBag.Message</label>
+                                </div>
                                 <div class="form-group">
                                     <input type="submit" value="Save" class="btn btn-primary" />
                                 </div>
