--- a/Overtime/Views/User/Index.cshtml
+++ b/Overtime/Views/User/Index.cshtml
@@ -34,7 +34,9 @@
                                             @Html.DisplayNameFor(model => model.u_role_description)
                                         </th>
 
-
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.u_allocation_yn)
+                                        </th>
                                         <th>
                                             @Html.DisplayNameFor(model => model.u_is_admin)
                                         </th>
@@ -54,42 +56,44 @@
                                 <tbody>
                                     @foreach (var item in Model)
                                     {
-                                        <tr>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.u_id)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.u_full_name)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.u_name)
-                                            </td>
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.u_id)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.u_full_name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.u_name)
+                                        </td>
 
 
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.u_role_description)
-                                            </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.u_role_description)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.u_allocation_yn)
+                                        </td>
 
-
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.u_is_admin)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.u_active_yn)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.u_cre_by_Name)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.u_cre_date)
-                                            </td>
-                                            <td>
-                                                <a asp-action="Edit" class="btn btn-info" asp-route-id="@item.u_id">Edit</a>
-                                            </td>
-                                            <td>
-                                                <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.u_id">Delete</a>
-                                            </td>
-                                        </tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.u_is_admin)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.u_active_yn)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.u_cre_by_Name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.u_cre_date)
+                                        </td>
+                                        <td>
+                                            <a asp-action="Edit" class="btn btn-info" asp-route-id="@item.u_id">Edit</a>
+                                        </td>
+                                        <td>
+                                            <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.u_id">Delete</a>
+                                        </td>
+                                    </tr>
                                     }
                                 </tbody>
                             </table>
