--- a/Overtime/Views/Department/Index.cshtml
+++ b/Overtime/Views/Department/Index.cshtml
@@ -26,6 +26,9 @@
                                         @Html.DisplayNameFor(model => model.d_description)
                                     </th>
                                     <th>
+                                        @Html.DisplayNameFor(model => model.d_allow_overtime_yn)
+                                    </th>
+                                    <th>
                                         @Html.DisplayNameFor(model => model.d_active_yn)
                                     </th>
                                     <th>
@@ -48,6 +51,9 @@
                                         </td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.d_description)
+                                        </td>
+                                         <td>
+                                            @Html.DisplayFor(modelItem => item.d_allow_overtime_yn)
                                         </td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.d_active_yn)
