--- a/Overtime/Views/User/Delete.cshtml
+++ b/Overtime/Views/User/Delete.cshtml
@@ -16,7 +16,7 @@
                     <h3>Are you sure you want to delete this?</h3>
                     </div>
                     <div>
-                      <dl class="dl-horizontal">
+                        <dl class="dl-horizontal">
                             <dt>
                                 @Html.DisplayNameFor(model => model.u_full_name)
                             </dt>
@@ -30,16 +30,10 @@
                                 @Html.DisplayFor(model => model.u_name)
                             </dd>
                             <dt>
-                                @Html.DisplayNameFor(model => model.u_password)
+                                @Html.DisplayNameFor(model => model.u_email)
                             </dt>
                             <dd>
-                                @Html.DisplayFor(model => model.u_password)
-                            </dd>
-                            <dt>
-                                @Html.DisplayNameFor(model => model.u_role_id)
-                            </dt>
-                            <dd>
-                                @Html.DisplayFor(model => model.u_role_id)
+                                @Html.DisplayFor(model => model.u_email)
                             </dd>
                             <dt>
                                 @Html.DisplayNameFor(model => model.u_is_admin)
@@ -53,12 +47,7 @@
                             <dd>
                                 @Html.DisplayFor(model => model.u_active_yn)
                             </dd>
-                            <dt>
-                                @Html.DisplayNameFor(model => model.u_cre_by)
-                            </dt>
-                            <dd>
-                                @Html.DisplayFor(model => model.u_cre_by)
-                            </dd>
+                           
                             <dt>
                                 @Html.DisplayNameFor(model => model.u_cre_date)
                             </dt>
