--- a/Overtime/Views/User/Index.cshtml
+++ b/Overtime/Views/User/Index.cshtml
@@ -29,7 +29,9 @@
                                             @Html.DisplayNameFor(model => model.u_name)
                                         </th>
 
-
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.u_email)
+                                        </th>
                                         <th>
                                             @Html.DisplayNameFor(model => model.u_role_description)
                                         </th>
@@ -65,6 +67,9 @@
                                         </td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.u_name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.u_email)
                                         </td>
 
 
