--- a/Overtime/Views/Department/Edit.cshtml
+++ b/Overtime/Views/Department/Edit.cshtml
@@ -33,6 +33,15 @@
                                     <span asp-validation-for="d_allow_overtime_yn" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
+                                    <label asp-for="d_allocation_yn" class="control-label"></label>
+                                    <select asp-for="d_allocation_yn" class="form-control" required>
+                                        <option value="">Select Option</option>
+                                        <option value="N">N</option>
+                                        <option value="Y">Y</option>
+                                    </select>
+                                    <span asp-validation-for="d_allocation_yn" class="text-danger"></span>
+                                </div>                                
+                                <div class="form-group">
                                     <input type="submit" value="Save" class="btn btn-primary" />
                                 </div>
                             </form>
