--- a/Overtime/Views/Attendance/Index.cshtml
+++ b/Overtime/Views/Attendance/Index.cshtml
@@ -16,69 +16,40 @@
         <div class="card">
             <div class="card-body">
                 <div class="page-header">
-                    <h3>Attendance</h3>
+                    <h3>Daily Attendance</h3>
                 </div>
                 <div>
-                    <div class="card">
-                        <div class="card-body">
-                            <table class="table" id="mytable">
-                                <thead>
-                                    <tr>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.u_full_name)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.u_name)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.u_email)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.u_department)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.u_status)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.u_remark)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.u_attendance_date)
-                                        </th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in Model)
-                                    {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.u_full_name)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.u_name)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.u_email)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.u_department)
-                                        </td>
-                                        <td class="status_@item.u_status">
-                                            @Html.DisplayFor(modelItem => item.u_status)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.u_remark)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.u_attendance_date)
-                                        </td>
-                                    </tr>
-                                    }
-                                </tbody>
-                            </table>
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="row">
+                        <div class="col-md-1">
+                            <div class="form-group">
+                                <div class="form-group">
+                                    <label class="control-label">Select Date</label>
+                                </div>
+                            </div>
                         </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <div class="form-group">
+                                    <input id="c_date" type="date" class="form-control" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; width: 100%" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-1">
+                            <div class="form-group" align="justify">
+                                <label class="control-label"></label>
+                                <input type="submit" onclick="GetDailyAttendance();" class="btn btn-primary" />
+                            </div>
+                        </div>
+                    </div>
+                    <hr />
+                    <div class="card">
+                        <div class="card-body" id="container">
+
+
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
