Leave detail added

--- a/Overtime/Views/Attendance/Index.cshtml
+++ b/Overtime/Views/Attendance/Index.cshtml
@@ -11,8 +11,11 @@
     .status_P {
         background-color: green;
     }
+    .status_L {
+        background-color: orange;
+    }
 </style>
-    <div class="container-fluid" style="margin-top:10px;">
+    <div class="container-fluid" style="margin-top: 10px;">
         <div class="card">
             <div class="card-body">
                 <div class="page-header">
