--- a/Overtime/Views/Attendance/GetDailyAttendance.cshtml
+++ b/Overtime/Views/Attendance/GetDailyAttendance.cshtml
@@ -12,9 +12,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.u_name)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.u_email)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.u_department)
             </th>
@@ -25,6 +25,9 @@
                 @Html.DisplayNameFor(model => model.u_remark)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.OfficeIn)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.u_attendance_date)
             </th>
         </tr>
@@ -32,29 +35,32 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.u_full_name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.u_name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.u_email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.u_department)
-                </td>
-                <td class="status_@item.u_status">
-                    @Html.DisplayFor(modelItem => item.u_status)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.u_remark)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.u_attendance_date)
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.u_full_name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.u_name)
+            </td>
+            @*<td>
+                @Html.DisplayFor(modelItem => item.u_email)
+            </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.u_department)
+            </td>
+            <td class="status_@item.u_status">
+                @Html.DisplayFor(modelItem => item.u_status)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.u_remark)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.OfficeIn)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.u_attendance_date)
+            </td>
+        </tr>
         }
     </tbody>
 </table>
