--- a/Overtime/Views/Attendance/LeaveDetail.cshtml
+++ b/Overtime/Views/Attendance/LeaveDetail.cshtml
@@ -31,6 +31,9 @@
                             @Html.DisplayNameFor(model => model.EndDate)
                         </th>
                         <th>
+                            @Html.DisplayNameFor(model => model.LeaveDays)
+                        </th>
+                        <th>
                             @Html.DisplayNameFor(model => model.MarkedBy)
                         </th>
                         <th>
@@ -48,8 +51,11 @@
                         <th>
                             @Html.DisplayNameFor(model => model.CurrentStatus)
                         </th>
-                        <th></th>
-                        <th></th>
+                        @if (ViewBag.AllocationAccess != null)
+                        {
+                            <th></th>
+                            <th></th>
+                        }
                     </tr>
                 </thead>
                 <tbody>
@@ -64,6 +70,9 @@
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.EndDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LeaveDays)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.MarkedBy)
@@ -83,12 +92,15 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.CurrentStatus)
                         </td>
+                        @if (ViewBag.AllocationAccess != null)
+                        {
                         <td>
                             <a class="btn btn-warning" asp-action="LeaveEdit" asp-route-id="@item.LeaveId">Edit</a>
                         </td>
-                         <td>
-                            <a class="btn btn-danger" onclick="DeleteLeave(@item.LeaveId)" >Delete</a>
+                        <td>
+                            <a class="btn btn-danger" onclick="DeleteLeave(@item.LeaveId)">Delete</a>
                         </td>
+                        }
                     </tr>
                     }
                 </tbody>
